[gd_scene load_steps=18 format=3 uid="uid://cm1k4un0mxh4b"]

[ext_resource type="Script" path="res://Enemies/EnemyScripts/boar_2.gd" id="1_hvonx"]
[ext_resource type="Texture2D" uid="uid://ov31n655r320" path="res://Art/3rdParty/Mob/Boar/Idle/Idle-Sheet-export-Back.png" id="2_6nxui"]
[ext_resource type="Texture2D" uid="uid://c0pkjm52sfmll" path="res://Art/3rdParty/Mob/Boar/Run/Run-Sheet-Black.png" id="3_6ntvo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qhal"]
atlas = ExtResource("2_6nxui")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0cxs"]
atlas = ExtResource("2_6nxui")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1cj5"]
atlas = ExtResource("2_6nxui")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucj3d"]
atlas = ExtResource("2_6nxui")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c20j1"]
atlas = ExtResource("3_6ntvo")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mg2i"]
atlas = ExtResource("3_6ntvo")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g25kx"]
atlas = ExtResource("3_6ntvo")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txba4"]
atlas = ExtResource("3_6ntvo")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdls"]
atlas = ExtResource("3_6ntvo")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ae5"]
atlas = ExtResource("3_6ntvo")
region = Rect2(240, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k2ewr"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qhal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0cxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1cj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucj3d")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c20j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mg2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g25kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txba4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ae5")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nynwr"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u178s"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_akkxb"]
radius = 120.004

[node name="Boar2" type="CharacterBody2D"]
script = ExtResource("1_hvonx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k2ewr")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -4)
shape = SubResource("CircleShape2D_nynwr")

[node name="hit_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_detection"]
position = Vector2(-2, -4)
shape = SubResource("CircleShape2D_u178s")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-2, -3)
shape = SubResource("CircleShape2D_akkxb")

[connection signal="body_entered" from="hit_detection" to="." method="_on_hit_detection_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
